--- a/test-output/old/Navigator/classes.html
+++ b/test-output/old/Navigator/classes.html
@@ -4,26 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>KafkaGUI.KafkaSchemaViewlet</td>
+<td>NavigatorCore.ManageDashboardOptions</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Events</td>
+<td>CreareDashboardUsingNewButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Properties</td>
+<td>ExportDashboard</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ShowObjectAttributes</td>
+<td>AddToCurrentViewButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddToFavoriteViewlet</td>
+<td>ImportDashboard</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DeleteTagUsingDeleteButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -31,7 +35,23 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>CreateTagUsingAddButton</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>Login</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>UpdateTagNameUsingEditButton</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>DeleteDashboardUsingDeleteButton</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>RenameDashboardUsingRenamebutton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
