--- a/test-output/old/Navigator/methods-alphabetical.html
+++ b/test-output/old/Navigator/methods-alphabetical.html
@@ -1,30 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Navigator</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:21:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.AddToFavoriteViewlet(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:6, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">AddToFavoriteViewlet</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:20:40</td>   <td>-48015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Events(java.lang.String, org.testng.ITestContext)[pri:3, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Events</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:19:14</td>   <td>-133264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Login(java.lang.String, java.lang.String, java.lang.String, int, java.lang.String)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Login</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:22:36</td>   <td>68312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Logout(java.lang.String)[pri:27, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Logout</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:20:17</td>   <td>-70551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.Properties(java.lang.String, org.testng.ITestContext)[pri:2, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">Properties</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:22:09</td>   <td>41559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="KafkaSchemaViewlet.ShowObjectAttributes(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:11, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">ShowObjectAttributes</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:19:14</td>   <td>-133302</td> <td>&nbsp;</td><td title="&gt;&gt;KafkaSchemaViewlet.beforeTest()[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:20:17</td>   <td>-70751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:20:39</td>   <td>-48916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:21:27</td>   <td>-921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:22:08</td>   <td>40615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:22:35</td>   <td>67400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>23/02/21 14:23:03</td>   <td>95217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;KafkaSchemaViewlet.tearDown(org.testng.ITestResult)[pri:0, instance:KafkaGUI.KafkaSchemaViewlet@1e1a0406]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:33:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.CreareDashboardUsingNewButton(java.lang.String, org.testng.ITestContext)[pri:1, instance:NavigatorCore.ManageDashboardOptions@201a4587]">CreareDashboardUsingNewButton</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:35:21</td>   <td>110030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.CreateTagUsingAddButton(java.lang.String, org.testng.ITestContext)[pri:4, instance:NavigatorCore.ManageDashboardOptions@201a4587]">CreateTagUsingAddButton</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:34:55</td>   <td>84556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.DeleteDashboardUsingDeleteButton(java.lang.String, org.testng.ITestContext)[pri:3, instance:NavigatorCore.ManageDashboardOptions@201a4587]">DeleteDashboardUsingDeleteButton</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:36:52</td>   <td>201444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.DeleteTagUsingDeleteButton(java.lang.String, org.testng.ITestContext)[pri:6, instance:NavigatorCore.ManageDashboardOptions@201a4587]">DeleteTagUsingDeleteButton</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:37:36</td>   <td>245035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.ExportDashboard(org.testng.ITestContext)[pri:7, instance:NavigatorCore.ManageDashboardOptions@201a4587]">ExportDashboard</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:32:17</td>   <td>-74270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">Login</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:37:53</td>   <td>261822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.Logout(java.lang.String)[pri:20, instance:NavigatorCore.ManageDashboardOptions@201a4587]">Logout</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:34:13</td>   <td>42582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.RenameDashboardUsingRenamebutton(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:2, instance:NavigatorCore.ManageDashboardOptions@201a4587]">RenameDashboardUsingRenamebutton</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:36:19</td>   <td>167940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageDashboardOptions.UpdateTagNameUsingEditButton(java.lang.String, java.lang.String, org.testng.ITestContext)[pri:5, instance:NavigatorCore.ManageDashboardOptions@201a4587]">UpdateTagNameUsingEditButton</td> 
+  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:32:17</td>   <td>-74345</td> <td>&nbsp;</td><td title="&gt;&gt;ManageDashboardOptions.beforeTest()[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:33:31</td>   <td>-176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:34:13</td>   <td>41631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:34:55</td>   <td>83641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:35:20</td>   <td>109117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:36:18</td>   <td>167062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:36:51</td>   <td>200563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:37:35</td>   <td>244145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:37:52</td>   <td>260949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>23/03/21 11:37:59</td>   <td>267747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManageDashboardOptions.tearDown(org.testng.ITestResult)[pri:0, instance:NavigatorCore.ManageDashboardOptions@201a4587]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@288958772</td>   <td></td> </tr>
 </table>
