--- a/test-output/old/Navigator/methods-not-run.html
+++ b/test-output/old/Navigator/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>NavigatorCore.ManageDashboardOptions.ImportDashboard</td></tr>
+<tr><td>NavigatorCore.ManageDashboardOptions.AddToCurrentViewButton</td></tr>
 </table>
